manifests/base/network-policies/kafka/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    istio.io/dataplane-mode: ambient
